syntax = "proto3";

package <%= config.projectPrefix %>.<%= config.nameCapitalize %>.Proto.v1;

service Example {
  rpc ExampleById (ExampleRequest) returns (ExampleReply);
}

message ExampleRequest {
  string id = 1;
}

message ExampleReply {
  string message = 1;
}
